modified for password reset and remember me function

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,3 +22,9 @@
   <p class="button"><%= f.submit 'Signin'%></p>
   <p class="button"><%= f.submit 'Signup'%></p>
 <% end %>
+
+<p><%= link_to "forgotten password?", new_password_reset_path %></p>
+<div class="field">
+  <%= check_box_tag :remember_me, 1, params[:remember_me] %>
+  <%= label_tag :remember_me %>
+</div>
