--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id="user_nav">
+  <!--<div id="user_nav">
     <% if current_user %>
       <%= current_user.email %>.
       <%= link_to "Log out", log_out_path %>
     <% end %>
-  </div>
+  </div>-->
 
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, :id => "flash_#{name}" %>
